--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">BaixoMiño League</string>
+    <string name="app_name">RATINGSOFT</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="prefs_file">com.example.baixominholeague.PREFERENCE_FILE_KEY</string>
+    <string name="prefs_file">com.example.ANDROID-RATING-SOFT PREFERENCE_FILE_KEY</string>
 </resources>
